@@ -1,6 +1,6 @@
 //
 // ========================================================================
-// Copyright (c) 1995-2022 Mort Bay Consulting Pty Ltd and others.
+// Copyright (c) 1995 Mort Bay Consulting Pty Ltd and others.
 //
 // This program and the accompanying materials are made available under the
 // terms of the Eclipse Public License v. 2.0 which is available at
@@ -75,7 +75,7 @@ public class LoopTest extends AbstractUseCase
             StandardCharsets.UTF_8);
         Files.write(baseDir.resolve("start.ini"),
             Collections.singletonList(
-                "--module=root"
+                "--modules=root"
             ),
             StandardCharsets.UTF_8);
 
@@ -83,7 +83,7 @@ public class LoopTest extends AbstractUseCase
         List<String> prepareArgs = Arrays.asList(
             "--testing-mode",
             "--create-startd",
-            "--add-module=tom"
+            "--add-modules=tom"
         );
         exec(prepareArgs, true);
 
@@ -145,7 +145,7 @@ public class LoopTest extends AbstractUseCase
             StandardCharsets.UTF_8);
         Files.write(baseDir.resolve("start.ini"),
             Collections.singletonList(
-                "--module=root"
+                "--modules=root"
             ),
             StandardCharsets.UTF_8);
 
@@ -153,7 +153,7 @@ public class LoopTest extends AbstractUseCase
         List<String> prepareArgs = Arrays.asList(
             "--testing-mode",
             "--create-startd",
-            "--add-module=tom"
+            "--add-modules=tom"
         );
         exec(prepareArgs, true);
 
