@@ -1,6 +1,6 @@
 //
 // ========================================================================
-// Copyright (c) 1995-2022 Mort Bay Consulting Pty Ltd and others.
+// Copyright (c) 1995 Mort Bay Consulting Pty Ltd and others.
 //
 // This program and the accompanying materials are made available under the
 // terms of the Eclipse Public License v. 2.0 which is available at
@@ -95,7 +95,7 @@ public class OrderedTest extends AbstractUseCase
 
         // === Execute Main
         List<String> runArgs = Collections.singletonList(
-            "--module=alternateA,dependent"
+            "--modules=alternateA,dependent"
         );
         ExecResults results = exec(runArgs, false);
 
@@ -172,7 +172,7 @@ public class OrderedTest extends AbstractUseCase
 
         // === Execute Main
         List<String> runArgs = Collections.singletonList(
-            "--module=dependent,alternateA"
+            "--modules=dependent,alternateA"
         );
         ExecResults results = exec(runArgs, false);
 
@@ -249,7 +249,7 @@ public class OrderedTest extends AbstractUseCase
 
         // === Execute Main
         List<String> runArgs = Collections.singletonList(
-            "--module=dependent"
+            "--modules=dependent"
         );
         ExecResults results = exec(runArgs, false);
 
@@ -321,7 +321,7 @@ public class OrderedTest extends AbstractUseCase
 
         // === Execute Main
         List<String> runArgs = Collections.singletonList(
-            "--module=main,convenience"
+            "--modules=main,convenience"
         );
         ExecResults results = exec(runArgs, false);
 
@@ -401,7 +401,7 @@ public class OrderedTest extends AbstractUseCase
         List<String> prepareArgs = Arrays.asList(
             "--testing-mode",
             "--create-startd",
-            "--add-module=abstractB,abstractA"
+            "--add-modules=abstractB,abstractA"
         );
         exec(prepareArgs, true);
 
